@@ -1,3 +1,5 @@
+#5767: Use black text on light fill colors (matthias)
+
 39
 
 * ACK received messages (cassidy)
